adding swagger for cbr handler
